add about Layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,18 @@
   padding: 0;
   box-sizing: border-;
  }
+
+
+ // footer
+ footer {
+  background-color: #000;
+ }
+ .footer-text {
+  color: #fff;
+ }
+ .twitter {
+  color: #fff;
+ }
+ footer a:hover {
+  color: #00aeef;
+ }
