--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -88,7 +88,7 @@
     </div>
     <div class="col-3"></div>
   </div>
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="col-4"><%= image_tag 'top3.png', size: "300x200" %></div>
     <div class="col-4"><%= image_tag 'top17.png', size: "300x200" %></div>
     <div class="col-4"><%= image_tag 'top18.png', size: "300x200" %></div>
