--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,16 @@
-<div class="bg-light border-top py-3">
-  <div class="container">
-    <div class="row my-2 text-center">
-      <div class="col">
-        <%= link_to "", "https://twitter.com/sakatai_photo", class: "fab fa-twitter fa-4x" %>
+<footer id="footer">
+  <div class="py-3">
+    <div class="container">
+      <div class="row my-2 text-center">
+        <div class="col">
+          <%= link_to "", "https://twitter.com/sakatai_photo", class: "twitter fab fa-twitter fa-4x" %>
+        </div>
       </div>
-    </div>
-    <div class="row text-center">
-      <div class="col mb-2">
-        <span class="text-muted">Copyright © Finance Bliss App All Rights Reserved.</span>
+      <div class="row text-center">
+        <div class="col mb-2">
+          <span class="footer-text">Copyright © Finance Bliss App All Rights Reserved.</span>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</footer>
