--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,3 +1,19 @@
+  <!--プロフィールのレイアウト-->
+<div class="about-profile">
+  <div class="container">
+    <div class="space"></div>
+    <div class="row">
+      <div class="col-8">
+        <div id="title-box">
+          <h1 class="profile-title">About</h1>
+          <h1 class="subtitle">About Me</h1>
+        </div>
+      </div>
+      <div class="col-4"></div>
+    </div>
+  </div>
+</div>
+<!--サブタイトル-->
 <div class="about-subtitle">
   <div class="container">
     <div class="row py-5">
@@ -13,47 +29,6 @@
         </p>
       </div>
       <div class="col-2"></div>
-    </div>
-  </div>
-</div>
-  <!--プロフィールのレイアウト-->
-<div class="about-profile">
-  <div class="container">
-    <div class="row">
-      <div class="col-2"></div>
-      <div class="col-8">
-        <div id="title-box">
-          <h1 class="profile-title">About</h1>
-          <h1 class="subtitle">About Me</h1>
-        </div>
-      </div>
-      <div class="col-2"></div>
-    </div>
-    <div class="row py-5">
-      <div class="col">
-        <%= image_tag 'sakatai.jpg', size: "300x400" %>
-      </div>
-      <div class="col">
-        <div class="row">
-          <div class="col">SAKATAI</div>
-          <div class="col">
-            <i class="fab fa-twitter-square mr-1"></i>
-            <i class="fab fa-instagram-square mr-1"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            メッセージ
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            老後資金2000万円不足問題の解決のために正しくお金の知識を身につけ自分に合った資産設計を行うこと、
-            早いうちから将来のことを考え資産設計を行い準備していれば決して難しい金額ではないことをアプリを通じて皆さんに伝えたいと考えています。
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
