--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -2,13 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// about
+// topページ
+.toppage {
+    background-color: #fff;
+}
+.app-info {
+    background-color: #d8d5d3;
+}
 #header{
     position: relative;/*h1の中央寄せ配置の起点とするためのrelative*/
     height: 100vh;/*高さを全画面にあわせる*/
 }
 video {
-  width: 100%;
+    width: 100%;
 }
 #video-area{
     position: fixed;
@@ -47,11 +53,14 @@ video {
     font-size: 85px;
 }
 
-
+// aboutページ
+.about-bg-image {
+    background-color: #f4f2f1;
+}
 // サブタイトル
 .about-subtitle {
-    background-color: #080808;
-    color: #fff;
+    background-color: #f4f2f1;
+    color: #342d31;
 }
 .sub-text {
     line-height: 2.0;
@@ -64,9 +73,17 @@ video {
 
 
 // プロフィール
+.space {
+    width: 100%;
+    height: 770px;
+}
 .about-profile {
-    background-color: #080808;
-    color: #fff;
+    height: 250vh;
+    background-image: image-url('about-sakatai.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    opacity: 0.8;
 }
 #title-box {
     position: relative;
@@ -82,12 +99,12 @@ video {
     opacity: 0.3;
     position: absolute;
     top: 0;
-    left: 100px;
+    left: 0;
 }
 .subtitle {
     position: absolute;
     top: 90px;
-    left: 280px;
+    left: 180px;
 }
 
 // aboutフォーム
