--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+// サイドバーの固定
+.sidebar {
+  height:100px;
+  top:10px;
+  position: -webkit-sticky;
+  position: sticky;
+}
