--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
-<footer id="footer">
+<footer>
   <div class="py-3">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row my-2 text-center">
         <div class="col">
           <%= link_to "", "https://twitter.com/sakatai_photo", class: "twitter fab fa-twitter fa-4x" %>
