--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   <body>
     <% if current_page?(about_path) %>
       <%= render 'layouts/aboutheader' %>
+    <% elsif current_page?(root_path) %>
+      <%= render 'layouts/topheader' %>
     <% else %>
       <%= render 'layouts/header' %>
     <% end %>
