--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
   <div class="col-2"></div>
-  <div class="col-10"><%= attachment_image_tag post, :image, format:'jpg', size: "550x400"%></div>
+  <div class="col-10"><%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %></div>
 </div>
 <div class="row my-4">
   <div class="col-2"></div>
