--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,15 @@
-<div class="contaoner">
-  <div class="row my-5">
+<div class="container-fluid">
+  <div class="row py-5">
     <div class="col-3">
-      <%= render 'users/sidebar' %>
+      <div class="row sidebar">
+        <%= render 'users/sidebar' %>
+      </div>
     </div>
     <div class="col-6">
       <%= render 'users/index', users: @users %>
     </div>
-    <div class="col-3">
-      <div class="row">
+    <div class="col-3 d-none d-lg-block">
+      <div class="row sidebar">
         <div class="col test-center mt-4">
           <%= form_with url:search_path, method: :get, local: true do |f| %>
             <%= f.text_field 'search[value]' %>
