--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
-<div class="contaoner">
-  <div class="row my-5">
+<div class="container-fluid">
+  <div class="row py-5">
     <!--サイドバー一覧-->
     <div class="col-3">
-      <%= render 'users/sidebar' %>
+      <div class="row sidebar">
+        <%= render 'users/sidebar' %>
+      </div>
     </div>
     <div class="col-6">
       <%= render 'users/profile', user: @user %>
@@ -16,8 +18,8 @@
       <%= render 'posts/index', posts: @posts %>
     </div>
     <!--検索機能-->
-    <div class="col-3">
-      <div class="row">
+    <div class="col-3 d-none d-lg-block">
+      <div class="row sidebar">
         <div class="col test-center mt-4">
           <%= form_with url:search_path, method: :get, local: true do |f| %>
             <%= f.text_field 'search[value]' %>
@@ -29,3 +31,4 @@
       </div>
     </div>
   </div>
+</div>
