add investment flash search edit new Layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,16 @@
   padding: 0;
   box-sizing: border-;
  }
+// フラッシュメッセージ
+.notice {
+  background-color: #aabac9;
+}
+.success {
+  background-color: #d7d9e5;
+}
+.alert {
+  background-color: red;
+}
 
 
  // footer
