--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -114,3 +114,36 @@ video {
 .form-dm {
     color: #fff;
 }
+
+
+// 投資診断
+.time-modal {
+    display: none;
+}
+.life-modal {
+    display: none;
+}
+.down-modal {
+    display: none;
+}
+.company-modal {
+    display: none;
+}
+.regular-modal {
+    display: none;
+}
+.trust-modal {
+    display: none;
+}
+.stock-modal {
+    display: none;
+}
+.asset-modal {
+    display: none;
+}
+.nisa-modal {
+    display: none;
+}
+.deposit-modal {
+    display: none;
+}
