--- a/app/views/homes/save.html.erb
+++ b/app/views/homes/save.html.erb
@@ -33,7 +33,7 @@
     </div>
     <div class="row">
       <div class="col text-center mb-4">
-        <%= link_to'もっと情報を知りたい方', new_user_registration_path, class: 'btn btn-primary' %>
+        <%= link_to'もっと情報を知りたい方', new_user_session_path, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
