--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,7 +11,7 @@
       <div class="row"><%= f.attachment_field :profile_image, placeholder: "image" %></div>
       <div class="row"><label for="inputName">名前</label></div>
       <div class="row"><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前" %></div>
-      <div class="row"><label for="inputIntroduction">紹介文</label></div>
+      <div class="row"><label for="inputIntroduction">紹介文　（最大160文字）</label></div>
       <div class="row"><%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:"紹介文", size: "30x5", class: "form-control" %></div>
     </div>
     <% end %>
