--- a/app/views/homes/investment.html.erb
+++ b/app/views/homes/investment.html.erb
@@ -4,45 +4,45 @@
   </div>
   <div class="row my-5 text-center">
     <div class="col-2"></div>
-    <div class="col">YES</div>
-    <div class="col">NO</div>
+    <div class="col" id="question1-yes-show">YES</div>
+    <div class="col" id="question1-no-show">NO</div>
     <div class="col-2"></div>
   </div>
   <div class="row my-5 text-center">
-    <div class="col"><h6>忙しいので運用に時間をかけたくない</h6></div>
-    <div class="col"><h6>６ヶ月〜1年分の生活費の予備資金がある</h6></div>
+    <div class="col time-modal"><h6>忙しいので運用に時間をかけたくない</h6></div>
+    <div class="col life-modal"><h6>６ヶ月〜1年分の生活費の予備資金がある</h6></div>
   </div>
   <div class="row my-5 text-center">
-    <div class="col">YES</div>
-    <div class="col">NO</div>
-    <div class="col">YES</div>
-    <div class="col">NO</div>
+    <div class="col time-modal" id="question2-yes-show">YES</div>
+    <div class="col time-modal" id="question2-no-show">NO</div>
+    <div class="col life-modal" id="question3-yes-show">YES</div>
+    <div class="col life-modal" id="question3-no-show">NO</div>
   </div>
   <div class="row my-5 text-center">
-    <div class="col"><h6>値下がりしても落ち着いていられる</h6></div>
-    <div class="col"><h6>企業の業績を調べるのが好きだ</h6></div>
-    <div class="col"><h6>毎月、定期預金の積み立てをしている</h6></div>
+    <div class="col down-modal"><h6>値下がりしても落ち着いていられる</h6></div>
+    <div class="col company-modal"><h6>企業の業績を調べるのが好きだ</h6></div>
+    <div class="col regular-modal"><h6>毎月、定期預金の積み立てをしている</h6></div>
   </div>
   <div class="row my-5 text-center">
-    <div class="col">YES</div>
-    <div class="col">NO</div>
-    <div class="col">YES</div>
-    <div class="col">NO</div>
-    <div class="col">YES</div>
-    <div class="col">NO</div>
+    <div class="col down-modal" id="question4-yes-show">YES</div>
+    <div class="col down-modal" id="question4-no-show">NO</div>
+    <div class="col company-modal" id="question5-yes-show">YES</div>
+    <div class="col company-modal" id="question5-no-show">NO</div>
+    <div class="col regular-modal" id="question6-yes-show">YES</div>
+    <div class="col regular-modal" id="question6-no-show">NO</div>
   </div>
   <div class="row mt-5 text-center">
-    <div class="col"><h6>投資信託(国内外株式)</h6></div>
-    <div class="col"><h6>株式・REIT</h6></div>
-    <div class="col"><h6>投資信託(資産分散型)</h6></div>
-    <div class="col"><h6>個人向け国債つみたてNISA</h6></div>
-    <div class="col"><h6>投資の前に定期預金の積み立てから</h6></div>
+    <div class="col trust-modal"><h6>投資信託(国内外株式)</h6></div>
+    <div class="col stock-modal"><h6>株式・REIT</h6></div>
+    <div class="col asset-modal"><h6>投資信託(資産分散型)</h6></div>
+    <div class="col nisa-modal"><h6>個人向け国債つみたてNISA</h6></div>
+    <div class="col deposit-modal"><h6>投資の前に定期預金の積み立てから</h6></div>
   </div>
   <div class="row mb-5 text-center">
-    <div class="col"><%= link_to '特徴や情報', trust_path, class: 'btn btn-primary' %></div>
-    <div class="col"><%= link_to '特徴や情報', stock_path, class: 'btn btn-primary' %></div>
-    <div class="col"><%= link_to '特徴や情報', asset_path, class: 'btn btn-primary' %></div>
-    <div class="col"><%= link_to '特徴や情報', nisa_path, class: 'btn btn-primary' %></div>
-    <div class="col"><%= link_to '特徴や情報', deposit_path, class: 'btn btn-primary' %></div>
+    <div class="col trust-modal"><%= link_to '特徴や情報', trust_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
+    <div class="col stock-modal"><%= link_to '特徴や情報', stock_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
+    <div class="col asset-modal"><%= link_to '特徴や情報', asset_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
+    <div class="col nisa-modal"><%= link_to '特徴や情報', nisa_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
+    <div class="col deposit-modal"><%= link_to '特徴や情報', deposit_path, class: 'btn btn-primary' %><p class="close-modal">もう一度診断をする</p></div>
   </div>
 </div>
