--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
-<footer>
+<footer id="footer">
+  <p id="page-top"><a href="#">Page Top</a></p>
   <div class="py-3">
     <div class="container-fluid">
       <div class="row my-2 text-center">
